<resources>
    <string name="app_name">FundInvest</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">News</string>
    <string name="Statements">Statements</string>
    <string name="News">News</string>
    <string name="Search">Search</string>
    <string name="Companies">Companies:</string>
    <string name="title_activity_ipo">IpoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="DarkTheme">Dark theme</string>
    <string-array name="languages">
        <item>en</item>
        <item>ru</item>
    </string-array>
    <string-array name="languagesReversal">
        <item>ru</item>
        <item>en</item>
    </string-array>
    <string name="Themes">Themes</string>
    <string name="IPO">IPO</string>
    <string name="Settings">Settings</string>
    <string name="LightTheme">Light theme</string>
    <string name="Language">Language</string>
    <string name="FundInvest">FundInvest</string>
    <string name="Russian">Russian</string>
    <string name="English">English</string>
    <string name="Operations">Operations:</string>
    <string name="hint">Enter company ticket</string>
    <string name="Income">Income</string>
    <string name="BalanceSheet">Balance Sheet</string>
    <string name="CashFlow">Cash Flow</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_to_here">New to here?</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="clear_history">Clear history</string>
</resources>