<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.fundinvest.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.fundinvest.ui.statements.StatementsFragment"
        android:label="@string/Statements"
        tools:layout="@layout/fragment_stetements" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.fundinvest.ui.news.NewsFragment"
        android:label="@string/News"
        tools:layout="@layout/fragment_news" />
</navigation>