<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.home.HomeFragment">


    <ImageView
        android:id="@+id/back_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/base_margin_start"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="65dp"
        android:src="@drawable/arrow"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/oxygen_mono"
        android:gravity="clip_horizontal"
        android:text="@string/Settings"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/BackgroundTopCorners"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            style="@style/Text"
            android:text="@string/Themes"
            android:textSize="20dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:textSize="18dp"
                android:text="@string/DarkTheme" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:theme="@style/MySwitch"
                android:checked="false"
                android:textOff="OFF"
                android:textOn="ON"
                app:showText="true"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:textSize="18dp"
                style="@style/Text"
                android:text="@string/LightTheme" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:theme="@style/MySwitch"
                android:checked="false"
                android:textOff="OFF"
                android:textOn="ON"
                app:showText="true"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textSize="20dp"
            android:text="@string/Language"
            style="@style/Text"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/ru_button"
                android:layout_width="wrap_content"
                android:text="@string/Russian"
                android:backgroundTint="@color/backColor"
                android:textColor="@color/white"
                android:layout_marginEnd="20dp"
                app:cornerRadius="15dp"
                android:layout_marginStart="20dp"
                android:layout_height="55dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/en_button"
                android:layout_width="wrap_content"
                android:text="@string/English"
                android:backgroundTint="@color/backColor"
                android:textColor="@color/white"
                android:layout_marginEnd="20dp"
                app:cornerRadius="15dp"
                android:layout_marginStart="20dp"
                android:layout_height="55dp"/>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>