<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Background"
    tools:context=".ui.statements.StatementsFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin_start"
        android:layout_marginBottom="104dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            style="@style/Logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            style="@style/Text"
            android:text="@string/Statements" />

    </LinearLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:textSize="17sp"
        android:hint="@string/hint"
        android:textColorHint="@color/lightGray"
        android:fontFamily="@font/oxygen_mono"
        android:background="@drawable/edit_text_shape"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324">

        <androidx.cardview.widget.CardView
            android:id="@+id/income_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/statement_card_margin"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/income_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/black"
                android:fontFamily="@font/oxygen_mono"
                android:padding="10dp"
                android:text="@string/Income"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/balance_sheet_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/statement_card_margin"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/balance_sheet_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:fontFamily="@font/oxygen_mono"
                android:padding="10dp"
                android:text="@string/BalanceSheet"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cash_flow_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/statement_card_margin"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/cash_flow_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:fontFamily="@font/oxygen_mono"
                android:padding="10dp"
                android:text="@string/CashFlow"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>