<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_margin_start"
            android:fontFamily="@font/oxygen_mono"
            android:text="@string/FundInvest"
            android:textColor="@color/white"
            android:textSize="25dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.75"
        app:layout_constraintWidth_percent="1"
        android:background="@drawable/shape"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/ipo_card"
                android:layout_width="145dp"
                android:layout_height="150dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                app:cardCornerRadius="@dimen/radius"
                app:cardElevation="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@color/white" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/ipo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/oxygen_mono"
                    android:text="@string/IPO"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/settings_card"
                android:layout_width="145dp"
                android:layout_height="150dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp"
                app:cardCornerRadius="@dimen/radius"
                app:cardElevation="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@color/white" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/menu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/oxygen_mono"
                    android:text="@string/Settings"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="15dp"
                android:layout_height="5dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/oxygen_mono"
            android:text="@string/Operations"
            android:textColor="@color/black"
            android:textSize="22dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>