<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.home.HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/register_card"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:cardCornerRadius="80dp"
        app:cardElevation="@dimen/base_cardElevation"
        app:cardBackgroundColor="@color/white"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginEnd="@dimen/base_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/base_margin">
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="Sign up"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/biggest_text" />
            <TableRow android:layout_marginEnd="@dimen/big_margin" android:padding="@dimen/base_padding">

                <ImageView
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginStart="@dimen/big_margin"
                    android:src="@drawable/ic_email" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/base_margin"
                    android:textColorHint="@color/lightGray"
                    android:textColor="@color/black"
                    android:hint="@string/email"
                    android:textSize="@dimen/medium_text" />
            </TableRow>
            <TableRow android:layout_marginTop="@dimen/big_margin" android:layout_marginEnd="@dimen/big_margin" android:padding="@dimen/base_padding">
                <ImageView
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="@dimen/big_margin"
                    android:src="@drawable/ic_person"/>

                <EditText
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="@dimen/base_margin"
                    android:layout_weight="1"
                    android:hint="@string/username"
                    android:textColor="@color/black"
                    android:textColorHint="@color/lightGray"
                    android:textSize="@dimen/medium_text" />

            </TableRow>
            <TableRow android:layout_marginTop="@dimen/big_margin" android:layout_marginEnd="@dimen/big_margin" android:padding="@dimen/base_padding">
                <ImageView
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="@dimen/big_margin"
                    android:src="@drawable/ic_lock"/>
                <EditText
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/base_margin"
                    android:textColorHint="@color/lightGray"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textSize="@dimen/medium_text" />

            </TableRow>

            <TableRow  android:padding="@dimen/base_padding">
                <TextView
                    android:id="@+id/row4_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:fontFamily="@font/oxygen_mono"
                    android:textSize="@dimen/small_text" />
                <TextView
                    android:id="@+id/row4_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:fontFamily="@font/oxygen_mono"
                    android:textSize="@dimen/small_text" />

            </TableRow>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:text="Continue"
                android:backgroundTint="@color/backColor"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/big_margin"
                app:cornerRadius="@dimen/base_cardCorners"
                android:layout_marginStart="@dimen/big_margin"
                android:layout_height="55dp"/>
        </TableLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>